--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ words_per_minute: 200
 baseurl: /
 
 # Website info
-title: Cqu
-description: The professional publishing platform
+title: 重大北京探索大本营
+description: The Camp of Explore in beijing with CQU.
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
@@ -24,8 +24,8 @@ navigation: True # show the navbar links
 subscribers: True # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
-twitter: tryghost # replace by your username
-facebook: ghost # replace by your username
+twitter: cqu # replace by your username
+facebook: cqu # replace by your username
 
 # Disqus
 disqus: False
