--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ twitter: cqu # replace by your username
 facebook: cqu # replace by your username
 
 # Disqus
-disqus: False
-disqus_shortname: jekyller # replace with your disqus username
+disqus: True
+disqus_shortname: www-warriorland-cn # replace with your disqus username
 
 # Google Analytics
-google_analytics: UA-69281367-1 # replace with your GA tracking identifier
+google_analytics: UA-150677587-1 # replace with your GA tracking identifier
 
 # Permalinks
 permalink: /:title
