--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ baseurl: /
 
 # Website info
 title: 重大北京探索大本营
-description: The Camp of Explore in beijing with CQU.
+description: The Camp of Explore in Beijing with CQU.
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
 favicon: assets/images/favicon.png
-production_url: https://jekyller.github.io/jasper2/
-source_url: https://github.com/jekyller/jasper2/
+production_url: https://cquexplorecamp.github.io/
+source_url: https://github.com/cquexplorecamp/cquexplorecamp.github.io/
 CNAME: #add cname for website to be created
 
 # Social info
@@ -24,8 +24,8 @@ navigation: True # show the navbar links
 subscribers: True # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
-twitter: cqu # replace by your username
-facebook: cqu # replace by your username
+twitter: False # replace by your username
+facebook: False # replace by your username
 
 # Disqus
 disqus: False
@@ -69,13 +69,13 @@ feed:
 # or "master" otherwise
 safe: False
 lsi: False
-username: jekyller
-repo: jasper2
+username: windrunner
+repo: cquexplorecamp
 branch: master
-relative_source: ../jasper2/
-destination: ../jasper2-pages/
-production_url:  https://jekyller.github.io/jasper2/
-source_url:  https://github.com/jekyller/jasper2/
+relative_source: ../cquexplorecamp/
+destination: ../cqu_blog/
+production_url:  https://cquexplorecamp.github.io/
+source_url:  https://github.com/cquexplorecamp/cquexplorecamp.github.io/
 
 exclude:
   - assets/css
