--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ CNAME: #add cname for website to be created
 # Social info
 navigation: True # show the navbar links
 subscribers: True # you need to connect an external service for this to work,
+subscriber_post: False # subscrber in post 
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
 twitter: False # replace by your username
