--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -87,13 +87,13 @@ yourzeromax:
   twitter: False
   cover: False
 windrunner:
-  username: Windrunner
+  username: windrunner
   name: Sylvanas
   location: Haidian, Beijing
   url_full: https://www.warriorland.cn
   url: www.warriorland.cn
   bio: for the Horde.
-  picture: assets/images/abraham.jpg
+  picture: assets/images/martin.jpg
   facebook: False
   twitter: False
   cover: False
